@@ -4,6 +4,8 @@
   causes .dot files to be compatible with OmniGraffle, which otherwise fails
   to import graphs with HTML node labels (issue reported by Lucas Florio,
   implementation based on template by Troy Anderson).
+* Prevent models named after Graphviz reserved words (Node, Edge) from causing
+  errors in .dot files (reported by gguthrie).
 
 === 0.4.3:
 
